# MscProject_NewsAgent2026

./: .env.example  .gitignore  AI_AGENT_DEMO.md  BUGFIX_REPORT.md  CRYPTO_REALTIME_RUNBOOK.md  CURRENT_STATUS.md  DATA_INTEGRATION_REPORT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_PLAN.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PROGRESS.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  REFACTORING_REVIEW.md  STAGE1_COMPLETE.md  STAGE2_COMPLETE.md  STAGE3_COMPLETE.md  STAGE4_COMPLETE.md  TEST_REPORT.md  WEB_FRONTEND_VERIFICATION.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  run_with_ai.py  test_agent_e2e.py  test_basic.py  test_llm.py  test_phase2_agents.py  test_phase5_api.py  test_skills.py  test_websocket.html
config/: __init__.py  settings.py
doc/: PRODUCT_RESTRUCTURING_AND_USER_STORY.md
scripts/: init_database.py  run_crypto_crawler.py  run_hkstocks_crawler.py
src/ai/: __init__.py
src/analyzers/: __init__.py  coin_dict.json  keyword_extractor.py  similarity.py  stopwords.txt  summarizer.py  trend.py
src/api/: __init__.py  app.py  dependencies.py  middleware.py  schemas.py
src/core/: exceptions.py  models.py
src/crawlers/: __init__.py  base.py
src/data/: database.py  schema.py
src/services/: __init__.py  (+10 more)
static/: app.js  app_identity.css  app_identity.js  chat.css  chat.js  chat_widget.css  chat_widget.js  skills.js  style.css
templates_UI/: analyzer.html  base.html  chat.html  error.html  home.html  search_results.html
tests/: test_ai_agents.py  test_ai_skills.py  test_ai_tools.py  test_api_integration.py  test_crypto_pipeline.py
(+51 files in other folders)
