[project]
name = "newsagent2025"
version = "2.0.0"
description = "新闻聚合和分析系统 - 重构版"
authors = [
    {name = "NewsAgent Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "keybert>=0.8.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "jieba>=0.42.1",
    "spacy>=3.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "redis>=5.0.0",
    "telethon>=1.34.0",
    "pyyaml>=6.0.0",
    "PySocks>=1.7.1",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
